--- a/applications/monitor-scale/k8s/deployment.yaml
+++ b/applications/monitor-scale/k8s/deployment.yaml
@@ -41,7 +41,7 @@ spec:
         ports:
         - containerPort: 3001
           name: monitor-scale
-      - image: zappi/kubectl:latest
+      - image: bitnami/kubectl:1.16.2
         name: kubectl-api
         args: ["proxy","-p","2345"]
         ports:
