--- a/manifests/monitor-scale-serviceaccount.yaml
+++ b/manifests/monitor-scale-serviceaccount.yaml
@@ -14,6 +14,7 @@ metadata:
   name: puzzle-scaler
 rules:
 - apiGroups:
+  - "apps"
   - "extensions"
   resources:
   - deployments
@@ -23,6 +24,7 @@ rules:
   verbs:
   - update
   - get
+  - patch
 
 ---
 
