--- a/steps.yml
+++ b/steps.yml
@@ -60,7 +60,7 @@ parts:
         com: scripts/etcd.sh
 
       - cap: Now that we have an etcd service, we need an etcd client. The following command will set up a directory within etcd for storing key-value pairs, and then run the etcd client.
-        com: kubectl create -f manifests/etcd-job.yml
+        com: kubectl create -f manifests/etcd-job.yaml
 
       - cap: Check the status of the job in step 2 to make sure it deployed.
         com: kubectl describe jobs/etcd-job
