--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "part3": "node start.js part3.yml",
     "part4": "node start.js part4.yml",
     "steps": "node start.js steps.yml",
-    "puzzleonly": "node start.js puzzleonly.yml"
+    "puzzleonly": "node start.js puzzleonly.yml",
+    "jenkinsinst": "node start.js jenkinsinst.yml"
   },
   "repository": {
     "type": "git",
